# manifold

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  config.loadtest.toml  config.toml  docker-compose.yml  justfile  package.json  pnpm-lock.yaml
.claude/: launch.json
crates/broker/: Cargo.toml
crates/broker/src/: lib.rs  memory.rs  redis_broker.rs
crates/broker/tests/: redis_multinode.rs
crates/core/: Cargo.toml
crates/core/src/: api.rs  auth.rs  config.rs  delivery.rs  events.rs  hub.rs  lib.rs  metrics.rs  namespace.rs
crates/core/tests/: engine.rs
crates/loadtest/: Cargo.toml
crates/loadtest/src/: main.rs
crates/protocol/: Cargo.toml  build.rs
crates/protocol/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: admin.rs  events.rs  grpc_api.rs  health.rs  http_api.rs  main.rs  sse.rs  ws.rs
docs/: architecture.md  config-reference.md  docmd.config.js  generate.mjs  index.md  progress.md  protocol.md  server-api.md
proto/: buf.yaml  manifold.proto  socket.proto
web/: index.html  package.json  tsconfig.json  vite.config.ts
web/src/: App.tsx  api.ts  main.tsx
