[package]
name = "socket-broker"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
socket-protocol = { workspace = true }
tokio = { workspace = true }
redis = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
prost = { workspace = true }
dashmap = { workspace = true }
