[package]
name = "manifold-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
manifold-protocol = { workspace = true }
manifold-broker = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
dashmap = { workspace = true }
jsonwebtoken = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
humantime-serde = { workspace = true }
