[package]
name = "manifold-loadtest"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "manifold-loadtest"
path = "src/main.rs"

[dependencies]
manifold-protocol = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
prost = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
jsonwebtoken = { workspace = true }
tokio-tungstenite = "0.24"
hdrhistogram = "7"
clap = { version = "4", features = ["derive"] }
