[package]
name = "socket-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
prost = { workspace = true }
tonic = { workspace = true }

[build-dependencies]
tonic-build = "0.12"
protoc-bin-vendored = "3"   # вендорим protoc, чтобы не требовать его в системе
