[package]
name = "socket-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
prost = { workspace = true }
tonic = { workspace = true }

[build-dependencies]
tonic-build = "0.12"
protoc-bin-vendored = "3"   # vendor protoc so it isn't required on the system
