[package]
name = "socket-server"
version.workspace = true
edition.workspace = true
license.workspace = true
default-run = "socket-server"

[[bin]]
name = "socket-server"
path = "src/main.rs"

[dependencies]
socket-protocol = { workspace = true }
socket-broker = { workspace = true }
socket-core = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
