[package]
name = "manifold-server"
version.workspace = true
edition.workspace = true
license.workspace = true
default-run = "manifold-server"

[[bin]]
name = "manifold-server"
path = "src/main.rs"

[dependencies]
manifold-protocol = { workspace = true }
manifold-broker = { workspace = true }
manifold-core = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
prost = { workspace = true }
futures = { workspace = true }
tokio-stream = "0.1"
async-stream = "0.3"
base64 = "0.22"
serde = { workspace = true }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tower = { workspace = true }
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
jsonwebtoken = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
